@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#2105] Change: Remove the empty option from the top of the event type selector widget
 - [#803] Change: Remove the _doEvents() method from the registration editor and the event editor
 - [#2099] Feature: Provide the file type as CSS class in the list of downloadable file in the detail view
 - [#1943] Feature: Add a global TS Setup switch "skip collision check"
